[SANTUARIO-615] Update test util SelfSignedCertGenerator