@@ -6,9 +6,9 @@
  * to you under the Apache License, Version 2.0 (the
  * "License"); you may not use this file except in compliance
  * with the License. You may obtain a copy of the License at
- *
+ * <p>
  * http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -16,9 +16,10 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-package org.apache.xml.security.utils;
+package org.apache.xml.security.testutils;
 
 import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
 import java.math.BigInteger;
 import java.nio.charset.StandardCharsets;
 import java.security.KeyPair;
@@ -28,8 +29,6 @@ import java.security.cert.X509Certificate;
 import java.time.Instant;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 /**
@@ -40,7 +39,7 @@ import java.util.Map;
  * and no --add-opens flags are required.
  * This class is designed to eliminate the need for storing test certificates in a keystore
  * or truststore. Instead, the certificates are generated dynamically during test execution.
- *</p>
+ * </p>
  * <h3>Supported signature algorithms</h3>
  * <ul>
  *   <li>RSA — {@code SHA256withRSA}, {@code SHA384withRSA}, {@code SHA512withRSA}</li>
@@ -59,7 +58,8 @@ import java.util.Map;
  */
 public final class SelfSignedCertGenerator {
 
-    private SelfSignedCertGenerator() {}
+    private SelfSignedCertGenerator() {
+    }
 
     /**
      * Pre-encoded DER bytes for the {@code AlgorithmIdentifier} of each supported
@@ -69,27 +69,15 @@ public final class SelfSignedCertGenerator {
      * <p>RSA algorithms include a trailing {@code NULL} parameters element (RFC 4055 §3.2).
      * ECDSA and EdDSA algorithms omit parameters entirely (RFC 5758, RFC 8410).
      */
-    private static final Map<String, byte[]> ALG_IDS;
-    static {
-        Map<String, byte[]> m = new HashMap<>();
-        // sha256WithRSAEncryption  1.2.840.113549.1.1.11  (RFC 4055)
-        m.put("SHA256withRSA",   hex("300d06092a864886f70d01010b0500"));
-        // sha384WithRSAEncryption  1.2.840.113549.1.1.12
-        m.put("SHA384withRSA",   hex("300d06092a864886f70d01010c0500"));
-        // sha512WithRSAEncryption  1.2.840.113549.1.1.13
-        m.put("SHA512withRSA",   hex("300d06092a864886f70d01010d0500"));
-        // ecdsa-with-SHA256        1.2.840.10045.4.3.2    (RFC 5758)
-        m.put("SHA256withECDSA", hex("300a06082a8648ce3d040302"));
-        // ecdsa-with-SHA384        1.2.840.10045.4.3.3
-        m.put("SHA384withECDSA", hex("300a06082a8648ce3d040303"));
-        // ecdsa-with-SHA512        1.2.840.10045.4.3.4
-        m.put("SHA512withECDSA", hex("300a06082a8648ce3d040304"));
-        // id-Ed25519               1.3.101.112            (RFC 8410)
-        m.put("Ed25519",         hex("300506032b6570"));
-        // id-Ed448                 1.3.101.113
-        m.put("Ed448",           hex("300506032b6571"));
-        ALG_IDS = Collections.unmodifiableMap(m);
-    }
+    private static final Map<String, byte[]> ALG_IDS = Map.of(
+            "SHA256withRSA",   encodeAlgorithmIdentifier("1.2.840.113549.1.1.11"),
+            "SHA384withRSA",   encodeAlgorithmIdentifier("1.2.840.113549.1.1.12"),
+            "SHA512withRSA",   encodeAlgorithmIdentifier("1.2.840.113549.1.1.13"),
+            "SHA256withECDSA", encodeAlgorithmIdentifier("1.2.840.10045.4.3.2"),
+            "SHA384withECDSA", encodeAlgorithmIdentifier("1.2.840.10045.4.3.3"),
+            "SHA512withECDSA", encodeAlgorithmIdentifier("1.2.840.10045.4.3.4"),
+            "Ed25519",         encodeAlgorithmIdentifier("1.3.101.112"),
+            "Ed448",           encodeAlgorithmIdentifier("1.3.101.113"));
 
     /**
      * Generates a self-signed X.509 v3 certificate.
@@ -115,9 +103,9 @@ public final class SelfSignedCertGenerator {
         }
 
         // publicKey.getEncoded() returns the SubjectPublicKeyInfo in X.509/DER format.
-        byte[] spki     = keyPair.getPublic().getEncoded();
-        byte[] name     = encodeName(subjectDN);
-        byte[] tbs      = buildTbs(algId, name, spki, validityDays);
+        byte[] spki = keyPair.getPublic().getEncoded();
+        byte[] name = encodeName(subjectDN);
+        byte[] tbs = buildTbs(algId, name, spki, validityDays);
 
         Signature signer = Signature.getInstance(signatureAlgorithm);
         signer.initSign(keyPair.getPrivate());
@@ -125,7 +113,7 @@ public final class SelfSignedCertGenerator {
         byte[] sigBytes = signer.sign();
 
         // Certificate ::= SEQUENCE { TBSCertificate, AlgorithmIdentifier, BIT STRING }
-        byte[] certDer = seq(cat(tbs, algId, bitString(sigBytes)));
+        byte[] certDer = sequence(cat(tbs, algId, bitString(sigBytes)));
 
         return (X509Certificate) CertificateFactory.getInstance("X.509")
                 .generateCertificate(new ByteArrayInputStream(certDer));
@@ -153,18 +141,18 @@ public final class SelfSignedCertGenerator {
     private static byte[] buildTbs(byte[] algId, byte[] name,
                                    byte[] spki, int validityDays) {
         // [0] EXPLICIT INTEGER 2  →  version v3
-        byte[] version  = new byte[]{(byte) 0xA0, 0x03, 0x02, 0x01, 0x02};
+        byte[] version = new byte[]{(byte) 0xA0, 0x03, 0x02, 0x01, 0x02};
         // Serial: milliseconds since epoch — unique enough for test certs
-        byte[] serial   = integer(BigInteger.valueOf(System.currentTimeMillis()));
+        byte[] serial = integer(BigInteger.valueOf(System.currentTimeMillis()));
         byte[] validity = buildValidity(validityDays);
         // issuer == subject for self-signed
-        return seq(cat(version, serial, algId, name, validity, name, spki));
+        return sequence(cat(version, serial, algId, name, validity, name, spki));
     }
 
     private static byte[] buildValidity(int validityDays) {
         Instant notBefore = Instant.now();
-        Instant notAfter  = notBefore.plusSeconds((long) validityDays * 86_400L);
-        return seq(cat(utcTime(notBefore), utcTime(notAfter)));
+        Instant notAfter = notBefore.plusSeconds(validityDays * 86_400L);
+        return sequence(cat(utcTime(notBefore), utcTime(notAfter)));
     }
 
     // -------------------------------------------------------------------------
@@ -180,12 +168,14 @@ public final class SelfSignedCertGenerator {
      */
     private static byte[] encodeName(String dn) {
         // OID for commonName (2.5.4.3): 06 03 55 04 03
-        byte[] cnOid   = hex("0603550403");
+        byte[] cnOid = encodeOid("2.5.4.3");
         byte[] cnValue = tlv(0x0C, extractCN(dn).getBytes(StandardCharsets.UTF_8)); // UTF8String
-        return seq(set(seq(cat(cnOid, cnValue))));
+        return sequence(set(sequence(cat(cnOid, cnValue))));
     }
 
-    /** Extracts the CN value from a DN string such as {@code "CN=My Test,O=Acme"}. */
+    /**
+     * Extracts the CN value from a DN string such as {@code "CN=My Test,O=Acme"}.
+     */
     private static String extractCN(String dn) {
         for (String part : dn.split(",")) {
             String trimmed = part.strip();
@@ -200,8 +190,68 @@ public final class SelfSignedCertGenerator {
     // DER / ASN.1 primitives
     // -------------------------------------------------------------------------
 
-    private static byte[] seq(byte[] content)  { return tlv(0x30, content); }
-    private static byte[] set(byte[] content)  { return tlv(0x31, content); }
+    /**
+     * Encodes the provided content as an ASN.1 DER SEQUENCE.
+     *
+     * <p>A SEQUENCE in ASN.1 represents an ordered collection of elements
+     * <p>The DER tag for a SEQUENCE is <b>0x30</b>.</p>
+     *
+     * <p><b>Use in X.509:</b><br>
+     * Distinguished Names (DNs), RelativeDistinguishedNames (RDNs), and
+     * AttributeTypeAndValue pairs are all encoded using SEQUENCE structures. For example,
+     * an AttributeTypeAndValue is defined as:</p>
+     *
+     * <pre>
+     * AttributeTypeAndValue ::= SEQUENCE {
+     *   type   OBJECT IDENTIFIER,
+     *   value  DirectoryString
+     * }
+     * </pre>
+     *
+     * <p>Thus, for the DN <code>CN=Test</code>, the inner attribute pair is encoded as:</p>
+     *
+     * <pre>
+     * 30 ...                SEQUENCE (AttributeTypeAndValue)
+     *   06 03 55 04 03      OID 2.5.4.3 (commonName)
+     *   0C 04 54 65 73 74   UTF8String "Test"
+     * </pre>
+     *
+     * @param content the already‑encoded DER content to wrap in a SEQUENCE
+     * @return the DER‑encoded SEQUENCE (tag 0x30 + length + content)
+     */
+    private static byte[] sequence(byte[] content) {
+        return tlv(0x30, content);
+    }
+
+
+    /**
+     * Encodes the provided content as an ASN.1 DER SET value.
+     *
+     * <p>In ASN.1, a SET represents an unordered collection of elements. Although the
+     * abstract syntax does not impose ordering, DER requires all elements inside a SET
+     * to be sorted by their encoded byte values to ensure canonical form.</p>
+     *
+     * <p>The DER tag for a SET is <b>0x31</b>.</p>
+     *
+     * <p><b>Use in X.509:</b><br>
+     * Within an X.509 Distinguished Name (DN), each RelativeDistinguishedName (RDN)
+     * is encoded as a SET containing one or more AttributeTypeAndValue structures.
+     * A DN therefore follows the structure:</p>
+     *
+     * <pre>
+     * Name ::= SEQUENCE OF
+     *            SET OF
+     *              SEQUENCE {
+     *                type   OBJECT IDENTIFIER,   -- e.g., 2.5.4.3 (commonName)
+     *                value  DirectoryString      -- e.g., UTF8String "Test"
+     *              }
+     * </pre>
+     * @param content the already‑encoded DER content to wrap in a SET
+     * @return the DER-encoded SET (tag 0x31 + length + content)
+     */
+    private static byte[] set(byte[] content) {
+        return tlv(0x31, content);
+    }
 
     private static byte[] integer(BigInteger value) {
         // toByteArray() produces two's-complement big-endian; positive integers may
@@ -211,11 +261,7 @@ public final class SelfSignedCertGenerator {
     }
 
     private static byte[] bitString(byte[] value) {
-        // Prefix with 0x00 = "0 unused bits in the final octet"
-        byte[] content = new byte[1 + value.length];
-        content[0] = 0x00;
-        System.arraycopy(value, 0, content, 1, value.length);
-        return tlv(0x03, content);
+        return tlv(0x03, cat(new byte[]{0x00}, value)); // 0x00 = zero unused bits
     }
 
     // UTCTime covers 2000–2049 (yy < 50 → 20yy).  Sufficient for short-lived test certs.
@@ -244,11 +290,13 @@ public final class SelfSignedCertGenerator {
         byte[] out = new byte[1 + lenBytes.length + len];
         out[0] = (byte) tag;
         System.arraycopy(lenBytes, 0, out, 1, lenBytes.length);
-        System.arraycopy(value,    0, out, 1 + lenBytes.length, len);
+        System.arraycopy(value, 0, out, 1 + lenBytes.length, len);
         return out;
     }
 
-    /** Concatenates byte arrays. */
+    /**
+     * Concatenates byte arrays.
+     */
     private static byte[] cat(byte[]... parts) {
         int total = 0;
         for (byte[] p : parts) {
@@ -263,12 +311,50 @@ public final class SelfSignedCertGenerator {
         return buf;
     }
 
-    /** Decodes a lowercase or uppercase hex string to bytes. */
-    private static byte[] hex(String s) {
-        byte[] b = new byte[s.length() / 2];
-        for (int i = 0; i < b.length; i++) {
-            b[i] = (byte) Integer.parseInt(s, i * 2, i * 2 + 2, 16);
+    /**
+     * Encode oid as certificate algorithm identifier.
+     * @param oid
+     * @return
+     */
+    public static byte[] encodeAlgorithmIdentifier(String oid) {
+        // RFC 8410: EdDSA parameters MUST be absent; RSA/ECDSA require a NULL (RFC 4055/5758)
+        byte[] nullParam = oid.startsWith("1.3.101.11") ? new byte[0] : new byte[]{0x05, 0x00};
+        return sequence(cat(encodeOid(oid), nullParam));
+    }
+
+    /**
+     * Endodes all number values to ASN.1/DER encoded bytearray
+     * @param oid - the value
+     * @return encoded byte array
+     */
+    public static byte[] encodeOid(String oid) {
+        String[] parts = oid.split("\\.");
+        ByteArrayOutputStream body = new ByteArrayOutputStream();
+        body.write(40 * Integer.parseInt(parts[0]) + Integer.parseInt(parts[1]));
+        for (int i = 2; i < parts.length; i++) {
+            byte[] arc = encodeBase128(Long.parseLong(parts[i]));
+            body.write(arc, 0, arc.length);
         }
-        return b;
+        return tlv(0x06, body.toByteArray());
+    }
+
+    /**
+     *  It encodes a non-negative integer using base-128 (variable-length) encoding, which is the standard
+     *  way ASN.1/DER encodes OID arc values
+     * @param value the long value
+     * @return ASN.1/DER encoded value
+     */
+    private static byte[] encodeBase128(long value) {
+        byte[] stack = new byte[10];
+        int count = 0;
+        do {
+            stack[count++] = (byte) (value & 0x7F);
+            value >>= 7;
+        } while (value > 0);
+        byte[] result = new byte[count];
+        for (int i = 0; i < count; i++) {
+            result[i] = (byte) (stack[count - 1 - i] | (i < count - 1 ? 0x80 : 0x00));
+        }
+        return result;
     }
 }
